tests/semantic/fail/cycle-3.tiger
let
	type a = b
	type b = c
	type c = b
in
	let
		type d = c
	in
	end
end
